--- a/Login.html
+++ b/Login.html
@@ -22,9 +22,9 @@
                     <a href="https://www.youtube.com/" class="icon-circle"><i class="fa-brands fa-x-twitter" alt="Twitter"></i></a>
                     <a href="https://www.pinterest.com/" class="icon-circle"><i class="fa-brands fa-pinterest" alt="Pinterest"></i></a>
                 </nav>
-                <div class="logo"><a href="Home.html">HOANG</a></div>
+                <div class="logo"><a href="Home.html"><img src="image/banner/logo.png"></a></div>
                 <div class="auth-buttons">
-                    <div class="logo"><a href="Home.html"><img src="image/banner/logo.png"></a></div>
+                    <a href="Login.html" class="login">Đăng nhập</a>
                 </div>
             </div>
             <div class="navbar-footer" id="navbarFooter">
